--- a/计算机网络.md
+++ b/计算机网络.md
@@ -53,3 +53,214 @@
 #### 标准化过程
 
 ![image-20220829204724064](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220829204724064.png)
+
+## 互联网组成
+
+![image-20220901192306599](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901192306599.png)
+
+### 边缘部分
+
+由所有连接在互联网上的主机组成，由用户直接使用，用来进行通信以及资源共享
+
+这些主机成为*端系统*
+
+端系统在功能上可能有很大差别
+
+拥有者可以是多样的
+
+### 核心部分
+
+由大量网络和连接这些网络的路由器组成
+
+
+
+
+
+### 通信的含义
+
+主机A的某个进程和主机B上的另一个进程进行通信。
+
+
+
+## 客户-服务方式
+
+描述的是进程之间服务和被服务的关系
+
+客户是服务的请求方；服务器是服务的提供方
+
+通信可以是双向的，客户和服务器都可以发送和接受数据
+
+![image-20220901192636900](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901192636900.png)
+
+### 客户程序
+
+- 被用户调用后运行，在通信时主动向远地服务器发起通信(请求服务)。因此，客户程序必须知道服务器程序的地址。
+
+- 不需要特殊的硬件和很复杂的操作系统。
+
+
+
+### 服务器程序
+
+- 是一种专门用来提供某种服务的程序，可同时处理多个远地或本地客户的请求。
+- 系统启动后即一直不断地运行着，被动地等待并接受来自各地的客户的通信请求。因此，服务器程序不需要知道客户程序的地址。
+- 一般需要有强大的硬件和高级的操作系统支持。客户与服务器的通信关系建立后，通信可以是双向的，客户和服务器都可发送和接收数据。
+
+## 对等连接方式
+
+两台主句在通信时不区分服务请求方和服务提供方，只要运行了P2P软件，就可以进行平等、对等的连接通信
+
+![image-20220901193151916](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901193151916.png)
+
+对等连接方式从本质上看仍是客户-服务器方式，但是对等连接中的每一台主机既是客户又是服务器
+
+## 互联网的核心部分
+
+互联网中最复杂的部分
+
+起特殊作用的是路由器
+
+> 核心部分采用分组交换技术
+
+路由器是实现分组交换的关键构件；其任务就是转发收到的分组
+
+### 电路交换技术
+
+![image-20220901193646454](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901193646454.png)
+
+交换就是按照某种方式动态的分配传输线路的资源
+
+特点：通话的两个用户始终占用端到端的通信资源
+
+缺点：线路传输效率很低
+
+电路交换分为三个阶段：
+
+- 建立连接：占用通信资源
+- 通话：一直占用通信资源
+- 释放连接：归还通信资源
+
+### 分组交换
+
+> 采用存储转发技术
+
+把较长的报文划分成更小的等长数据段
+
+![image-20220901194626236](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901194626236.png)
+
+- 主机是为用户进行信息处理
+- 路由器是用来转发分组的，即进行分组交换
+
+优点：
+
+![image-20220901195616163](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220901195616163.png)
+
+缺点：
+
+- 排队延迟：分组在各路由器存储转发时需要排队
+- 不保证带宽：动态分配
+- 增加开销：各分组必须携带控制信息；路由器要暂存分组，维护转发表（对路由器有要求）
+
+## 计算机网络定义
+
+计算机网络主要是由一些通用的、可编程的硬件互连而成的，而这些硬件并非专门用来实现某一特定目的( 例如，传送数据或视频信号)。这些可编程的硬件能够用来传送多种不同类型的数据，并能支持广泛的和日益增长的应用。
+
+
+
+- 计算机网络所连接的硬件，并不限于一般的计算机， 而是包括了智能手机或智能电视机;
+
+- 计算机网络并非专门用来传送数据，而是能够支持很多种应用(包括今后可能出现的各种应用)。当然，没有数据的传送，这些应用是无法实现的。
+
+## 计算机网络分类
+
+LAN（局域网），由用户自行建设，使用私有地址组建的内部网络
+
+MAN（城域网），由运营商或者大规模企业建设，连接城市范围的网络
+
+WAN（广域网），由运营商建设，连接全国各个城域网的网络（骨干网、核心网、传输网）
+
+广义广域网：局域网之外都是广域网
+
+狭义广域网：LAN、MAN、WAN
+
+## 计算机网络的性能
+
+### 速率
+
+速率往往是额定速率或者标称速率
+
+### 带宽
+
+单位时间内能够传输的数据总量（/bps比特每秒，1B字节=8b比特）
+
+带宽越大，网络质量越好
+
+#### 频域
+
+某个信号具有的频带宽度
+
+单位：赫
+
+某信道允许通过的信号频带范围称为该信道的带宽
+
+#### 时域
+
+单位时间内网络中的某信道所能通过的最高数据率
+
+单位：bit/s
+
+### 吞吐量
+
+单位时间内通过某个网络的**实际数据量**
+
+受网络带宽和网络额定速率的限制
+
+### 时延
+
+数据从网络一段传送到另外一段所需要的时间
+
+- 发送时延（传输时延）
+
+发生在机器内部
+
+![image-20220905191658580](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905191658580.png)
+
+- 传播时延
+
+发送在机器外部的传输信道媒体上
+
+电磁波在信道中传播一定距离花费的时间
+
+=信道长度（m）/信号在信道上传播速率（m/s）
+
+- 处理时延
+
+主机或路由器收到分组时，为处理分组所花费的时间
+
+- 排队时延（取决于当时的网络量）
+
+分组在路由器输入输出队列中排队等待处理和转发所经历的时延
+
+![image-20220905192513169](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905192513169.png)
+
+### 时延带宽积
+
+=传播时延   X   带宽
+
+![image-20220905193437103](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905193437103.png)
+
+### 往返时间（RTT）
+
+从发送方发送完数据，到发送方收到来自接收方的确认总共经历的时间
+
+![image-20220905193812284](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905193812284.png)
+
+![image-20220905194142969](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905194142969.png)
+
+![image-20220905194153369](C:\Users\10315\AppData\Roaming\Typora\typora-user-images\image-20220905194153369.png)
+
+### 利用率
+
+信道利用率
+
+网络利用率
